    - Use for MD RAID newer 1.0 specification. (src/geometry.c)
        (thanks to Robert de Bath)             (src/raid.c)

  General
  -------
    - Use better 'checkit' for newer gcc.  (checkit)
    - Remove very old scripts.      (mkbdist, mksdist,QuickInst)
    - Create new makefile-based script QuickInst.
    - Create new hook scripts for kernel and initramfs.


Changes for version 23.0 (28-June-2010) - Joachim Wiedorn

  Documentations
  --------------
    - Move very old file INCOMPAT into readme/.
    - Update file COPYING with copyrights and license.
    - Update copyrights in some file headers.
    - Add new files README, TODO, NEWS.
    - Fix for some typos in manpages.
    - Update some old files in readme/ and docs/.
    - Move to creating pdf instead of ps in /docs.
    - Add found old manpage man/keytab-lilo.pl.
    - Update additional informations  (lilo.lsm, sample/README).
    - Set static manpage path to /usr/share/man (make.vars).
    - Update of the program command logging header.

  Sources
  -------
    - Fix error messages.           (script checkit)
    - Allow spaces in boot menu.    (bsect.c)
    - Workaround for buggy Bios.    (probe.c)
    - Check for user root.          (script mkrescue)
    - Use better temporary fifo's   (script mkrescue)
    - Check for needed floppy space (script mkrescue)
    - devmapper should use major/minor.  (geometry.c)
    - Bios workarounds.             (second.S)
    - Suppress error message if device does not exist. (geometry.c)
    - Change 'map' to 'kmap'.       (keytab-lilo.pl)
    - Add warnings for inaccessible disk (device.c, geometry.c)
    - Modify script mkrescue for use of spaces in files.
    - Speedup for geometry          (geometry.c)
    - Add 'define' for lvm partition (lilo.h, partition.c)
    - Don't scan '.udev' directory  (device.c)
    - Use default size 'hdsize'     (script mkrescue)
    - Move macro 'S' into 'SA' (crt.S, lilo.c, lilo.h, probe.c, second.S)